Static/css/style.css
@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");


/* Global Styles */
*   {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Canva Sans, sans-serif;
}

body {
    background-color: #a2c8cd;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

/* Half of page for login page */
.left-side {
  content: "";
  position: fixed;
  top: 0;
  left: 0;         
  width: 50%;       
  height: 100vh;    
  background-color: #6e699b; 
  z-index: -1;      
}

/* Half of page for sign up page */
.right-side {
  content: "";
  position: fixed;
  top: 0;
  right: 0;         
  width: 50%;       
  height: 100vh;    
  background-color: #6e699b; 
  z-index: -1;      
}

/* layout.html */
.top-bar {
    display: flex;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    justify-content: space-between;
    background-color: #6e699b;
    margin-bottom: 20px;
    padding: 35px;
}

.left-section {
    display: flex;
    align-items: center;
    gap: 60px;
}

.logo {
    width: 150px; 
}

.brand-title {
    font-size: 80px;
    font-weight: bold;
    color: black;
}

.right-section {
    display: flex;
    align-items: center;
    gap: 150px; 
}

.time {
    background-color: #000000;
    color: #ffffff;
    padding: 10px 20px;
    border-radius: 10px;
    font-size: 80px;
    font-weight: bold;
    border: 5px solid #a3cfff;
}

.gear-icon {
    width: 150px;
    cursor: pointer;
    transition: transform 0.2s ease;
}

/* login.html */
.login-container {
    background-color: #92c9a9;
    padding: 50px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 500px;
    height: 500px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.login-container h2 {
    text-align: left;
    margin-bottom: 20px;
}

.login-container p {
    text-align: left;
    margin-bottom: 35px;
}

.input-group {
    margin-bottom: 20px;
}

.input-group label {
    display: block;
    font-weight: bold;
    margin-bottom: 5px;
}

.input-group input {
    width: 100%;
    padding: 10px;
    border-radius: 6px;
    border: 1px solid #aaa;
}

.forgot-link {
    text-align: left;
    margin-bottom: 15px;
    padding-right: 5px;
}

.forgot-link a {
    font-size: 14px;
    color: #333;
    padding: 5px;
}

button[type="submit"] {
    width: 100%;
    padding: 12px;
    background-color: #4a4aff;
    color: white;
    border: none;
    border-radius: 6px;
    font-size: 16px;
    cursor: pointer;
    margin-bottom: 10px;
}

button[type="button"] {
    width: 100%;
    padding: 12px;
    background-color: #4a4aff;
    color: white;
    border: none;
    border-radius: 6px;
    font-size: 16px;
    cursor: pointer;
    margin-bottom: 10px;
}

.login-container a {
    color: #333;
}

